# ZooAnimals

./: README.md  pyproject.toml
model/: base.py  data.py
